--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durante un tiempo no estuvo segura de si su marido era su marido.\n"
+     ]
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "#I create \"sep = ' ' for create a space between 2 words.\n",
+    "separate = ' '\n",
+    "#Now I create a new list and join the sep \" \" to str_list. This change de . (dots) for a \" \" (empty space).\n",
+    "new_str_list = separate.join(str_list)\n",
+    "#Now I do print and + a dot for final print\n",
+    "print(new_str_list + \".\")"
    ]
   },
   {
@@ -50,12 +64,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bread.\n",
+      "Grocery list: broccoli.\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "Grocery_list = ' ,'.join(food_list).lower()\n",
+    "for a in food_list:\n",
+    "    if a.startswith('b'):\n",
+    "        print(\"Grocery list:\", a + \".\")\n"
    ]
   },
   {
@@ -69,9 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-61-421665f84bb9>, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-61-421665f84bb9>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    # Your output string here:\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -106,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
