At the end, the ejercice 3 done

--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -96,15 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-61-421665f84bb9>, line 18)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-61-421665f84bb9>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    # Your output string here:\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius:, 5.0, is:, 78.53981633974483\n"
      ]
     }
    ],
@@ -113,9 +112,9 @@
     "\n",
     "string1 = \"The area of the circle with radius:\"\n",
     "string2  = \"is:\"\n",
-    "radius = 4.5\n",
+    "radius = 5.0\n",
     "\n",
-    "def area(x, pi = math.pi):\n",
+    "def area(x):\n",
     "    # This function takes a radius and returns the area of a circle. We also pass a default value for pi.\n",
     "    # Input: Float (and default value for pi)\n",
     "    # Output: Float\n",
@@ -124,9 +123,10 @@
     "    # Sample Output: 78.53981633\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
-    "    \n",
-    "# Your output string here:"
+    "    return math.pi * (x**2)\n",
+    "  \n",
+    "   # Your output string here:\n",
+    "print(f'{string1}, {str(radius)}, {string2}, {str(area(radius))}')"
    ]
   },
   {
@@ -142,9 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire,', 'Some', 'say', 'in', 'ice.', 'From', 'what', 'I’ve', 'tasted', 'of', 'desire', 'I', 'hold', 'with', 'those', 'who', 'favor', 'fire.', 'But', 'if', 'it', 'had', 'to', 'perish', 'twice,', 'I', 'think', 'I', 'know', 'enough', 'of', 'hate', 'To', 'say', 'that', 'for', 'destruction', 'ice', 'Is', 'also', 'great', 'And', 'would', 'suffice.']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -156,7 +164,9 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(poem.split( ))\n",
+    "#print(poem.split(', '))"
    ]
   },
   {
