Subo el lab sin terminar

--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -64,25 +64,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bananas',\n",
+       " 'chocolate',\n",
+       " 'bread',\n",
+       " 'diapers',\n",
+       " 'ice cream',\n",
+       " 'brownie mix',\n",
+       " 'broccoli']"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = ['Bananas', 'Chocolate', 'Bread', 'diapers', 'Ice cream', 'brownie mix', 'broccoli']\n",
+    "\n",
+    "fruit = [fruit.lower() for fruit in fruits] #if fruit.startswith('b')]\n",
+    "\n",
+    "\n",
+    "fruit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grocery list: bread.\n",
-      "Grocery list: broccoli.\n"
+      "Durante un tiempo no estuvo segura de si su marido era su marido.\n"
      ]
     }
    ],
    "source": [
-    "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
+    "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
     "# Your code here:\n",
-    "Grocery_list = ' ,'.join(food_list).lower()\n",
-    "for a in food_list:\n",
-    "    if a.startswith('b'):\n",
-    "        print(\"Grocery list:\", a + \".\")\n"
+    "#I create \"sep = ' ' for create a space between 2 words.\n",
+    "separate = ' '\n",
+    "#Now I create a new list and join the sep \" \" to str_list. This change de . (dots) for a \" \" (empty space).\n",
+    "new_str_list = separate.join(str_list)\n",
+    "#Now I do print and + a dot for final print\n",
+    "print(new_str_list + \".\")"
    ]
   },
   {
@@ -142,14 +174,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire,\\nSome', 'say', 'in', 'ice.\\nFrom', 'what', 'I’ve', 'tasted', 'of', 'desire\\nI', 'hold', 'with', 'those', 'who', 'favor', 'fire.\\nBut', 'if', 'it', 'had', 'to', 'perish', 'twice,\\nI', 'think', 'I', 'know', 'enough', 'of', 'hate\\nTo', 'say', 'that', 'for', 'destruction', 'ice\\nIs', 'also', 'great\\nAnd', 'would', 'suffice.']\n"
+     "ename": "SyntaxError",
+     "evalue": "can't assign to function call (<ipython-input-292-e2e3f96281e2>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-292-e2e3f96281e2>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    new_poem.lower() = poem.split(' ')\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
      ]
     }
    ],
@@ -165,11 +198,13 @@
     "And would suffice.\"\"\"\n",
     "\n",
     "# Your code here:\n",
+    "\n",
+    "#new_poem = \"\".join(poem.split(\".\"))\n",
     "new_poem = poem.split(' ')\n",
-    "#new_poem = poem.split('\\n')\n",
     "\n",
     "\n",
-    "print(new_poem)"
+    "\n",
+    "print (new_poem)"
    ]
   },
   {
@@ -221,14 +256,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 293,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THE APPARITION OF THESE FACES IN THE CROWD;\n",
+      "PETALS ON A WET, BLACK BOUGH.\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "#with .upper() i can convert all in uppercase\n",
+    "print (poem.upper())"
    ]
   },
   {
