--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -64,22 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['bananas',\n",
-       " 'chocolate',\n",
-       " 'bread',\n",
-       " 'diapers',\n",
-       " 'ice cream',\n",
-       " 'brownie mix',\n",
-       " 'broccoli']"
+       "['brownie mix', 'broccoli']"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +81,7 @@
    "source": [
     "fruits = ['Bananas', 'Chocolate', 'Bread', 'diapers', 'Ice cream', 'brownie mix', 'broccoli']\n",
     "\n",
-    "fruit = [fruit.lower() for fruit in fruits] #if fruit.startswith('b')]\n",
+    "fruit = [fruit.lower() for fruit in fruits if fruit.startswith('b')]\n",
     "\n",
     "\n",
     "fruit"
@@ -174,20 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-292-e2e3f96281e2>, line 14)",
+     "evalue": "EOL while scanning string literal (<ipython-input-2-b73c4fd339e1>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-292-e2e3f96281e2>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    new_poem.lower() = poem.split(' ')\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-b73c4fd339e1>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    poem = 'Some say the world will end in fire,\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
    "source": [
-    "poem = \"\"\"Some say the world will end in fire,\n",
+    "poem = Some say the world will end in fire,\n",
     "Some say in ice.\n",
     "From what I’ve tasted of desire\n",
     "I hold with those who favor fire.\n",
@@ -195,16 +189,14 @@
     "I think I know enough of hate\n",
     "To say that for destruction ice\n",
     "Is also great\n",
-    "And would suffice.\"\"\"\n",
+    "And would suffice.\n",
     "\n",
     "# Your code here:\n",
     "\n",
     "#new_poem = \"\".join(poem.split(\".\"))\n",
     "new_poem = poem.split(' ')\n",
     "\n",
-    "\n",
-    "\n",
-    "print (new_poem)"
+    "new_poem"
    ]
   },
   {
@@ -216,13 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-5ecb317a73e5>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-5ecb317a73e5>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    poem = I was angry with my friend;\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
-    "poem = \"\"\"I was angry with my friend; \n",
+    "poem = I was angry with my friend; \n",
     "I told my wrath, my wrath did end.\n",
     "I was angry with my foe: \n",
     "I told it not, my wrath did grow. \n",
@@ -240,9 +241,13 @@
     "And into my garden stole, \n",
     "When the night had veild the pole; \n",
     "In the morning glad I see; \n",
-    "My foe outstretched beneath the tree.\"\"\"\n",
+    "My foe outstretched beneath the tree.\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "poem = [poem.lower() for words in poem]\n",
+    "\n",
+    "print(poem)\n",
+    "\n"
    ]
   },
   {
@@ -256,21 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "THE APPARITION OF THESE FACES IN THE CROWD;\n",
-      "PETALS ON A WET, BLACK BOUGH.\n"
+      "THE APPARITION OF THESE FACES IN THE CROWD; PETALS ON A WET, BLACK BOUGH.\n"
      ]
     }
    ],
    "source": [
-    "poem = \"\"\"The apparition of these faces in the crowd;\n",
-    "Petals on a wet, black bough.\"\"\"\n",
+    "poem = 'The apparition of these faces in the crowd; Petals on a wet, black bough.'\n",
     "\n",
     "# Your code here:\n",
     "#with .upper() i can convert all in uppercase\n",
@@ -286,13 +289,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 're' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-10d8b95fded1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Your code here:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mdata2\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Number: [0-9]'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mdata2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 're' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "data2= re.search('Number: [0-9]', 'data')\n",
+    "\n",
+    "data2"
    ]
   },
   {
@@ -308,20 +327,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "expected string or bytes-like object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-8cd97c88f70f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'123abc'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'abc123'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'JohnSmith1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ABBY4'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'JANE'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Your code here:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[0-9]'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/miniconda3/envs/jupyter_env/lib/python3.7/re.py\u001b[0m in \u001b[0;36msearch\u001b[0;34m(pattern, string, flags)\u001b[0m\n\u001b[1;32m    181\u001b[0m     \"\"\"Scan through string looking for a match to the pattern, returning\n\u001b[1;32m    182\u001b[0m     a Match object, or None if no match was found.\"\"\"\n\u001b[0;32m--> 183\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    184\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    185\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrepl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: expected string or bytes-like object"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "# Your code here:\n",
+    "print(re.search('[0-9]', data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
+    "# My test of code"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:jupyter_env] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-jupyter_env-py"
   },
   "language_info": {
    "codemirror_mode": {
