the challenge-1 with the last one

--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,8 @@
       "b False\n",
       "c True\n",
       "d False\n",
-      "e False\n"
+      "e False\n",
+      "a True\n"
      ]
     }
    ],
@@ -300,27 +301,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-67-aef7d261a85a>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-67-aef7d261a85a>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    print(count)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\",\"a\"]\n",
     "\n",
     "for letter in letters:\n",
-    "    count = letters.count(tup3)\n",
-    "        print(count)\n",
-    "    \n",
-    "        "
+    "    if letter in tup3:\n",
+    "        print(tup3.count(letter))"
    ]
   },
   {
