Yeah roght, all done in challenge-2

--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -38,11 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[85, 77, 68, 80, 9, 61, 42, 70, 55, 3, 94, 82, 16, 4, 35, 15, 62, 93, 29, 58, 60, 53, 69, 47, 48, 95, 46, 63, 8, 40, 89, 83, 65, 38, 22, 88, 31, 86, 39, 76, 11, 71, 45, 57, 79, 75, 1, 33, 14, 66, 24, 97, 12, 91, 28, 17, 87, 7, 21, 92, 41, 37, 43, 64, 6, 84, 56, 72, 18, 67, 96, 34, 98, 59, 27, 26, 51, 10, 90, 52]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "import random\n",
+    "#With random.sample I can get a list of random numbers that are not repeated and are within a range of numbers. \n",
+    "sample_list_1 = random.sample(range(0, 100), 80)\n",
+    "print(sample_list_1)       "
    ]
   },
   {
@@ -54,11 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = sample_list_1\n",
+    "print(len(set1))"
    ]
   },
   {
@@ -77,27 +99,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93\n",
+      "92\n",
+      "56\n",
+      "51\n",
+      "61\n",
+      "61\n",
+      "26\n",
+      "81\n",
+      "31\n",
+      "3\n",
+      "30\n",
+      "72\n",
+      "55\n",
+      "70\n",
+      "99\n",
+      "63\n",
+      "30\n",
+      "76\n",
+      "49\n",
+      "9\n",
+      "4\n",
+      "88\n",
+      "21\n",
+      "42\n",
+      "38\n",
+      "40\n",
+      "46\n",
+      "83\n",
+      "48\n",
+      "56\n",
+      "9\n",
+      "85\n",
+      "77\n",
+      "38\n",
+      "35\n",
+      "0\n",
+      "55\n",
+      "94\n",
+      "32\n",
+      "30\n",
+      "83\n",
+      "14\n",
+      "27\n",
+      "50\n",
+      "41\n",
+      "72\n",
+      "7\n",
+      "5\n",
+      "83\n",
+      "66\n",
+      "45\n",
+      "30\n",
+      "99\n",
+      "35\n",
+      "94\n",
+      "88\n",
+      "86\n",
+      "68\n",
+      "91\n",
+      "37\n",
+      "100\n",
+      "85\n",
+      "83\n",
+      "66\n",
+      "27\n",
+      "93\n",
+      "86\n",
+      "8\n",
+      "20\n",
+      "21\n",
+      "51\n",
+      "40\n",
+      "65\n",
+      "80\n",
+      "56\n",
+      "22\n",
+      "11\n",
+      "97\n",
+      "6\n",
+      "60\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Convert `sample_list_2` to a set called `set2`. Print the length of the set. Is its length still 80?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "import random\n",
+    "for number in range(80):\n",
+    "    sample_list_1 = (random.randint(0,100))\n",
+    "    print(sample_list_1)"
    ]
   },
   {
@@ -109,11 +206,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 6}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = [5, 3, 5, 6, 4]\n",
+    "set2 = [9, 8, 7, 3, 5]\n",
+    "set3 = (set(set1).difference(set2))\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{7, 8, 9}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = [5, 3, 5, 6, 4]\n",
+    "set2 = [9, 8, 7, 3, 5]\n",
+    "set4 = (set(set2).difference(set1))\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +262,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 5}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = [5, 3, 5, 6, 4]\n",
+    "set2 = [9, 8, 7, 3, 5]\n",
+    "set5 = (set(set1) & set(set2))\n",
+    "print(set5)"
    ]
   },
   {
@@ -169,7 +302,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "#I don't understand what you mean by the relationship."
    ]
   },
   {
@@ -181,11 +315,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = []"
    ]
   },
   {
@@ -197,11 +332,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'update'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-156-4f41e648b3cf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#I found this link that explains it quite well, but I still can't make it work\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#####https://beginnersbook.com/2019/04/python-set-update-method/###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mset6\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mset3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mset5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'update'"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "#It doesn't work for me, and I don't really know why it is, \n",
+    "#I found this link that explains it quite well, but I still can't make it work\n",
+    "#####https://beginnersbook.com/2019/04/python-set-update-method/###\n",
+    "set6.update[set3,set5]\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +365,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ouuuuch! the lists are different!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = {5, 3, 5, 6, 4}\n",
+    "set2 = {9, 8, 7, 3, 5}\n",
+    "if set1==set2:\n",
+    "         print(\"Hooray, the lists are equal!\")\n",
+    "else :\n",
+    "         print(\"Ouuuuch! the lists are different!\")"
    ]
   },
   {
@@ -229,11 +395,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'issubset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-135-86f7a56fef14>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mset1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0missubset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mset1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0missubset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'issubset'"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "#Your code here\n",
+    "#Not works because set2 y set3 are lists, not sets, but I want \n",
+    "#you to explain to me in class where I had the previous mistake.\n",
+    "\n",
+    "set1.issubset(set2)\n",
+    "set1.issubset(set3)"
    ]
   },
   {
@@ -247,11 +430,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3, 4, 5, 6, 7, 8, 9}"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1.union(set3, set4, set5)\n",
+    "set1.union(set1, set2)"
    ]
   },
   {
@@ -263,11 +459,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 3, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "x = set1.pop()\n",
+    "print(set1)"
    ]
   },
   {
@@ -283,11 +489,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "#I added a 9 at the end of the set1 because the original set1 doesn't contain any \n",
+    "#number that is in list_to_remove and therefore it wasn't going to be affected.\n",
+    "set1 = {5, 3, 5, 6, 4, 9}\n",
+    "res = [i for i in list_to_remove if i not in set1]\n",
+    "print(str(res))"
    ]
   }
  ],
@@ -307,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
