Yeah right, all done in challenge-2

--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -309,14 +309,13 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "1\n",
       "1\n"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\",\"a\"]\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
     "\n",
     "for letter in letters:\n",
     "    if letter in tup3:\n",
